java/java-tests/testData/ig/com/siyeh/igtest/memory/anonymous_inner_class_may_be_static/UnresolvedReference.java
class UnresolvedReference {
  void foo() {
    Thread thread = new Thread(new Runnable() {
      @Override
      public void run() {
        int a = 4;
        System.out.println(a + <error descr="Cannot resolve symbol 'doesNotExist'">doesNotExist</error>);
      }
    });
  }
}
